--- a/src/styles.css
+++ b/src/styles.css
@@ -116,6 +116,16 @@ input[type="text"] {
     font-family: 'Arvo', serif;
 }
 
-#searchCombo{
+.searchCombo{
     text-align: center;
+}
+.searchCombo input{
+    border: none;
+    border-radius: 5px;
+    font-family: 'Arvo', serif;
+    font-weight: 400;
+}
+
+#search_submit{
+    
 }
