Started creating hotel page

--- a/src/styles.css
+++ b/src/styles.css
@@ -16,6 +16,13 @@ body {
     height: 400px;
     transition: all 0.5s;
 }
+.big{
+    height: 800px;
+}
+
+.imageHolder{
+    
+}
 
 .mainTitle {
     margin: 0%;
