--- a/src/styles.css
+++ b/src/styles.css
@@ -16,13 +16,12 @@ body {
     height: 400px;
     transition: all 0.5s;
 }
-.big{
+
+.big {
     height: 800px;
 }
 
-.imageHolder{
-    
-}
+.imageHolder {}
 
 .mainTitle {
     margin: 0%;
@@ -35,7 +34,7 @@ body {
     float: left;
 }
 
-.container{
+.container {
     display: flex;
     height: 100%;
     align-items: center;
@@ -50,7 +49,8 @@ body {
     padding: 0 1%;
     transition: all 0.5s;
 }
-.column >h3{
+
+.column>h3 {
     text-align: center;
     margin-top: 45%;
     font-family: 'Arvo', serif;
@@ -60,7 +60,7 @@ body {
     transition: all 0.5s;
 }
 
-.column2{
+.column2 {
     float: left;
     width: 40%;
     height: 100%;
@@ -79,16 +79,16 @@ body {
         display: block;
         padding: 0 5%;
     }
-    .column >h3{
-        margin: 10%;  
+    .column>h3 {
+        margin: 10%;
     }
-    .mainTitle{
+    .mainTitle {
         padding-top: 25px;
         margin-left: 0;
         text-align: center;
         width: 100%;
     }
-    .titleCard{
+    .titleCard {
         height: 200px;
     }
 }
@@ -98,6 +98,11 @@ body {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     border-radius: 30px;
     transition: all 0.5s;
+}
+.card:hover{
+    box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 15px;
+    background-color:#ff8811;
 }
 
 .container {
@@ -119,20 +124,48 @@ body {
     padding-top: 9%;
 }
 
+.imageHolder {
+    max-width: ;
+}
+
 input[type="text"] {
     font-family: 'Arvo', serif;
 }
 
-.searchCombo{
+.searchCombo {
     text-align: center;
 }
-.searchCombo input{
+
+.searchCombo input {
     border: none;
     border-radius: 5px;
     font-family: 'Arvo', serif;
     font-weight: 400;
 }
 
-#search_submit{
-    
+#search_submit {}
+
+.headerTitle {
+    overflow: hidden;
+    padding: 20px 10px;
+    background-color: #ff8811;
+}
+
+a {
+    text-decoration: none;
+}
+
+#logoClick {
+    margin: 0%;
+    padding: 0 1%;
+    font-family: 'Arvo', serif;
+    font-size: 70px;
+    color: #ff8811;
+    background-color: #fff8f0;
+    display: inline;
+    text-decoration: none;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    margin-bottom: 20px;
+    border: 3px;
+    border-radius: 5px;
 }
