Title working at any size now

--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,7 @@ body {
     float: left;
     animation-name: fadein;
     animation-duration: 1.5s;
+    cursor: default;
 }
 
 .container {
@@ -83,6 +84,16 @@ body {
     }
 }
 
+@media screen and (max-width: 723px) {
+    #search {
+        padding-top: 1px;
+    }
+    .searchCombo input {
+        padding-top: 1px;
+        margin-left: 0;
+    }
+}
+
 @media screen and (max-width: 650px) {
     .column {
         width: 90%;
@@ -97,6 +108,7 @@ body {
         margin-left: 0;
         text-align: center;
         width: 100%;
+        font-size: 80px;
     }
     .titleCard {
         height: 200px;
@@ -152,6 +164,14 @@ input[type="text"] {
     border-radius: 5px;
     font-family: 'Arvo', serif;
     font-weight: 400;
+    font-size: 20px;
+    background-color: #fff8f0;
+    margin-left: 45px;
+    padding-top: 50px;
+}
+
+#search {
+    width: 250px;
 }
 
 #search_submit {}
@@ -165,7 +185,6 @@ input[type="text"] {
 a {
     text-decoration: none;
 }
-
 
 .aboutText {
     float: right;
