--- a/src/styles.css
+++ b/src/styles.css
@@ -60,30 +60,32 @@ body {
     color: #ff8811;
     font-size: 40px;
     margin-top: 0;
-
 }
 
 .perNight {
     float: left;
-    margin-left: 45%;
-    margin-right: 35% ;
+    margin-left: 40%;
+    margin-right: 40%;
 }
-
 
 .hotelDetails {
     display: block;
 }
 
-.reviews{
-
+.reviews {
+    border-radius: 33px;
+    background: #fff8f0;
+    box-shadow: 8px 8px 16px #c7c1bb, -8px -8px 16px #ffffff;
 }
-.reviews>h3{
+
+.reviews>h3 {
     float: left;
     margin-right: 100%;
 }
-.reviews>p{
+
+.reviews>p {
     float: left;
-    width:32% ;
+    width: 32%;
 }
 
 .container {
@@ -183,9 +185,16 @@ body {
 
 .side-crop {
     max-width: 80%;
+    max-height: 80%;
     overflow: hidden;
     margin-left: 10%;
     padding-top: 9%;
+}
+
+.side-crop>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .imageHolder {
@@ -224,9 +233,8 @@ input[type="text"] {
     background-color: #ff8811;
 }
 
-.headerTitle:hover{
+.headerTitle:hover {
     box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.2);
-    
 }
 
 a {
@@ -258,19 +266,19 @@ a {
     padding: 0 1%;
     font-family: 'Arvo', serif;
     font-size: 70px;
-    color: #ff8811;
-    background-color: #fff8f0;
+    color: #fff8f0;
     display: inline;
     text-decoration: none;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     margin-bottom: 20px;
-    border: 3px;
     border-radius: 5px;
     animation-name: fadein;
     animation-duration: 1.0s;
+    border-radius: 15px;
+    background: #ff8811;
+    box-shadow: 8px 8px 16px #c76a0d, -8px -8px 16px #ffa615;
     transition: box-shadow 0.5s;
 }
-#logoClick:hover{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4);
-}
 
+#logoClick:hover {
+    box-shadow: inset 8px 8px 16px #c76a0d, inset -8px -8px 16px #ffa615;
+}
