--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,7 @@ body {
     background-color: #f4d06f;
 }
 
+
 .titleCard {
     margin: 0px;
     background-color: #fff8f0;
@@ -50,6 +51,10 @@ body {
     width: 45%;
 }
 
+.trendingArea a{
+    color: #292f36"
+}
+
 .hotelTitle {
     font-size: 60px;
     text-align: center;
@@ -60,6 +65,7 @@ body {
     color: #ff8811;
     font-size: 40px;
     margin-top: 0;
+    transition: color 0.5s;
 }
 
 .perNight {
@@ -78,12 +84,12 @@ body {
     box-shadow: 8px 8px 16px #c7c1bb, -8px -8px 16px #ffffff;
 }
 
-.reviews>h3 {
+.reviews h3 {
     float: left;
     margin-right: 100%;
 }
 
-.reviews>p {
+.reviews p {
     float: left;
     width: 32%;
 }
@@ -104,7 +110,17 @@ body {
     transition: all 0.5s;
 }
 
-.column>h3 {
+.column a{
+    color: #292f36;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+.column a:visited{
+    color: #292f36;
+}
+
+
+.column h3 {
     text-align: center;
     margin-top: 45%;
     font-family: 'Arvo', serif;
@@ -127,24 +143,13 @@ body {
     }
 }
 
-@media screen and (max-width: 723px) {
+@media screen and (max-width: 736px) {
     #search {
         padding-top: 1px;
     }
     .searchCombo input {
         padding-top: 1px;
-        margin-left: 0;
-    }
-}
-
-@media screen and (max-width: 650px) {
-    .column {
-        width: 90%;
-        display: block;
-        padding: 0 5%;
-    }
-    .column>h3 {
-        margin: 10%;
+        margin-left: 5px;
     }
     .mainTitle {
         padding-top: 25px;
@@ -158,6 +163,17 @@ body {
     }
 }
 
+@media screen and (max-width: 650px) {
+    .column {
+        width: 90%;
+        display: block;
+        padding: 0 5%;
+    }
+    .column h3 {
+        margin: 10%;
+    }
+}
+
 .card {
     background-color: #fff8f0;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -165,10 +181,29 @@ body {
     transition: all 0.5s;
 }
 
+.cardText p{
+    color: #292f36;
+    padding-bottom: 4%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+}
+
+.priceNight{
+    padding-left: 10%;
+    padding-top: 0%;
+    padding-bottom: 4%;
+}
+
+
+
 .card:hover {
     box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     background-color: #ff8811;
+}
+
+.card:hover .priceTag {
+    color: #fff8f0;
 }
 
 .container {
@@ -177,7 +212,7 @@ body {
 
 .title {
     color: #292f36;
-    padding-bottom: 4%;
+    padding-bottom: 1%;
     padding-left: 10%;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
@@ -191,7 +226,7 @@ body {
     padding-top: 9%;
 }
 
-.side-crop>img {
+.side-crop img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -247,17 +282,17 @@ a {
     color: #fff8f0;
 }
 
-.aboutText>a {
+.aboutText a {
     text-decoration: underline solid transparent;
     transition: text-decoration 0.5s ease;
     color: #fff8f0;
 }
 
-.aboutText>a:visited {
+.aboutText a:visited {
     color: #fff8f0;
 }
 
-.aboutText>a:hover {
+.aboutText a:hover {
     text-decoration: underline solid Currentcolor;
 }
 
