--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,6 @@ body {
     background-color: #f4d06f;
 }
 
-
 .titleCard {
     margin: 0px;
     background-color: #fff8f0;
@@ -30,7 +29,6 @@ body {
     height: 800px;
 }
 
-
 .mainTitle {
     margin: 0%;
     padding-right: 0%;
@@ -50,8 +48,9 @@ body {
     width: 45%;
 }
 
-.trendingArea a{
+.trendingArea a {
     color: #292f36"
+
 }
 
 .hotelTitle {
@@ -109,15 +108,15 @@ body {
     transition: all 0.5s;
 }
 
-.column a{
+.column a {
     color: #292f36;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
-.column a:visited{
+
+.column a:visited {
     color: #292f36;
 }
-
 
 .column h3 {
     text-align: center;
@@ -180,20 +179,18 @@ body {
     transition: all 0.5s;
 }
 
-.cardText p{
+.cardText p {
     color: #292f36;
     padding-bottom: 4%;
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
 }
 
-.priceNight{
+.priceNight {
     padding-left: 10%;
     padding-top: 0%;
     padding-bottom: 4%;
 }
-
-
 
 .card:hover {
     box-shadow: 0 6px 15px 0 rgba(0, 0, 0, 0.2);
@@ -259,7 +256,6 @@ input[type="text"] {
     width: 250px;
 }
 
-
 .headerTitle {
     overflow: hidden;
     padding: 20px 10px;
@@ -314,4 +310,115 @@ a {
 
 #logoClick:hover {
     box-shadow: inset 8px 8px 16px #c76a0d, inset -8px -8px 16px #ffa615;
+}
+
+.login-div {
+    margin: auto;
+    width: 430px;
+    height: 700px;
+    padding: 60px 35px 35px 35px;
+    border-radius: 50px;
+    background: #fff8f0;
+    box-shadow: 20px 20px 60px #d9d3cc, -20px -20px 60px #ffffff;
+}
+
+.logo {
+    background: url("src/img/Hotelite Logo.png");
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    margin: 0 auto;
+    box-shadow: /* logo shadow */
+    0px 0px 2px #5f5f5f, /* offset */
+    0px 0px 0px 5px #fff8f0, /*bottom right */
+    8px 8px 15px #d9d3cc, /* top left */
+    -8px -8px 15px #ffffff;
+}
+
+.login-div .title {
+    text-align: center;
+    font-size: 28px;
+    letter-spacing: 0.5px;
+    padding-top: 24px;
+    padding-right: 0%;
+    padding-bottom: 0%;
+    padding-left: 0%;
+    color: #292f36;
+}
+
+.sub-title {
+    text-align: center;
+    font-size: 15px;
+    padding-top: 7px;
+    letter-spacing: 3px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.fields {
+    width: 100%;
+    padding: 75px 5px 5px 5px;
+}
+
+.fields input {
+    border: none;
+    outline: none;
+    background: none;
+    font-size: 18px;
+    color: #555;
+    padding: 20px 10px 20px 5px;
+}
+
+.username, .password, .email, .confirmpassword{
+    margin-bottom: 30px;
+    border-radius: 25px;
+    box-shadow: inset 8px 8px 8px #d9d3cc, inset -8px -8px 8px #ffffff;
+}
+
+.fields svg {
+    height: 22px;
+    margin: 0 10px -3px 25px;
+    fill: #292f36;
+}
+
+.signin-button {
+    outline: none;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+    height: 60px;
+    border-radius: 30px;
+    font-size: 20px;
+    font-weight: 700;
+    font-family: 'Roboto', sans-serif;
+    color: #292f36;
+    text-align: center;
+    background: #ff8811;
+    box-shadow: 3px 3px 8px #d9d3cc, -3px -3px 8px #ffffff;
+    transition: 0.5s;
+}
+
+.signin-button:hover {
+    background: #ff8d1c;
+}
+
+.signin-button:active {
+    background: #db750f;
+}
+
+.link {
+    padding-top: 20px;
+    text-align: center;
+}
+
+.link a {
+    text-decoration: none;
+    color: #292f36;
+    font-size: 15px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.error{
+    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    margin-top: 24px;
 }
